<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/tutor_trending_card_width"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_profile_image"
        android:layout_width="@dimen/tutor_trending_card_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        app:cardCornerRadius="@dimen/roundness_card"
        app:contentPadding="@dimen/margin_extra_small">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:id="@+id/item_tutor_tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tutor_name"
                android:textColor="@color/text_header"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_tutor_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/item_tutor_tv_name"
                android:layout_marginBottom="@dimen/margin_small"
                android:gravity="center"
                android:text="@string/tutor_job"
                android:textColor="@color/text_body"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/tv_tutor_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/star_pressed"
                android:text="@string/tutor_rating"
                android:layout_below="@id/item_tutor_tv_title"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/item_tutor_tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/tutor_price"
                android:layout_below="@id/item_tutor_tv_title"
                android:textColor="@color/colorAccent"
                android:layout_marginBottom="@dimen/margin_small"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_tutor_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="@dimen/margin_extra_small"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_pic"
        android:translationZ="@dimen/margin_small" />

</RelativeLayout>